fix frontend performance
